--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 </head>
 <body>
     <script type="text/javascript" href="./script.js"></script>
+    <div class="container">
+        <div id="ok" class="flex-item">ok</div>
+        <div id="cancel" class="flex-item">cancel</div>
+        <div id="showDate" class="flex-item">show date</div>
+    </div>
+    <div id = "emptySpace"></div>
 </body>
 </html>
